# mail-client

./: .gitignore  README.md  constants.py  emails.db  ingestion.py  main.py  pyproject.toml  rule.json  run_rules.py  sample_rules.json
db/: engine.py  models.py
gmail/: reader.py  writer.py
oauth/: auth.py
services/: email_sync.py  rule_evaluator.py
utils/: json_utils.py  logger.py  types.py
